--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html>
 	<head>
 		<title>Zhen Zhou's Webfolio!</title>
-		<link rel="stylesheet" href="/static/designs.css">
+		<link rel="stylesheet" href="static/designs.css">
 	</head>
 	<body>
 		<h1>About me!</h1>
 		<p>Hello! I'm Zhen Zhou. I am currently studying in <span style="color:red">V</span><span style="color:yellow">J</span>, and I am passionate in Physics, Computing and Math!</p>
 		<p>Here are some links where you can see my projects and some fun facts about me!</p>
 		<ol>
-			<li><a href="/fun-facts">Fun Facts</a></li>
-			<li><a href="/projects">Projects</a></li>
+			<li><a href="/webfolio/fun-facts">Fun Facts</a></li>
+			<li><a href="/webfolio/projects">Projects</a></li>
 		</ol>
 		<h2>Feedback!</h2>
 		<form action="/">
