--- a/fun-facts.html
+++ b/fun-facts.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Fun Facts</title>
-		<link rel="stylesheet" href="/static/designs.css">
+		<link rel="stylesheet" href="static/designs.css">
 		<style>
 			.emphasise {font-weight: bold; color:blue;}
 			.italicise {font-style: italic;}
