--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>My Projects</title>
-		<link rel="stylesheet" href="/static/designs.css">
+		<link rel="stylesheet" href="static/designs.css">
 		<style>
 			.emphasise {font-weight: bold; color:blue;}
 			.italicise {font-style: italic;}
@@ -15,10 +15,10 @@
 		<h3>Details</h3>
 		<p>I originally wrote the pokedex code nearing the end of term 1 in one afternoon at the school library. Back then I had a very big misconception about the parameters in a function and I didn't really know how to read from a CSV file (we were going to learn that in term 2 if i remember correctly) so the code was ugly, but I completed task with whatever I knew.</p>
 		<p>I do feel that it's not very efficient and not well written, but I was glad that I managed to make a functioning program. And the surprise feature...it's quite simple. It reverses the names of the pokemon. Originally I was going to permanently reverse it, but I was in a very good mood that day.</p>
-		<a href="/static/pokedex.py" download>
+		<a href="static/pokedex.py" download>
 			<button>Download the python code</button><br>
 		</a>
-		<a href="/static/pokemon.csv" download>
+		<a href="static/pokemon.csv" download>
 			<button>Download the CSV data</button><br>
 		</a>
 		<h2>Project #2: <span class="emphasise italicise">Webfolio</span></h2>
