--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<li><a href="/webfolio/projects">Projects</a></li>
 		</ol>
 		<h2>Feedback!</h2>
-		<form action="/">
+		<form action="/webfolio">
 			<p>I would like to hear from <span style="font-weight:bold; text-decoration:underline; color:red;">you!</span></p>
 			<p>What do you think about the website?</p>
 			<input type="radio" id ="good" name="opinion">
