--- a/fun-facts.html
+++ b/fun-facts.html
@@ -13,7 +13,7 @@
 		<ul>
 			<li>I ate <span class="italicise">only two types</span> of noodles from the same stall throughout my secondary school life.</li>
 			<li>My favourite TV show is <span class="emphasise">The Simpsons.</span></li>
-			<img src="/static/Simpsons_cast.png" alt="Image">
+			<img src="static/Simpsons_cast.png" alt="Image">
 			<li>My favourite song as of now: <a href="https://www.youtube.com/watch?v=ejdZEe4Rd0o"><span class="italicise">Weird Fishes by Radiohead</span></a>
 			<li>Here's how I would rank all the O-Level Subjects I took:
 				<table>
