--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
 		<p class="italicise">A static webpage that displays all of my computing projects!<p>
 		<h3>Details</h3>
 		<p>I didn't really have a lot of things to display on my portfolio, so when the teacher assigned this project, I decided to make this a <span class="italicise">"base"</span> website so that I can add more stuff in the future to make it a formal portfolio. When it came to colours...the only one I liked was black and white. So I decided to make it all black and white. <span class="emphasise">Not because I'm lazy!</span></p>
-		<p>To stick to tradition, I finished the bulk of it in an afternoon. But a sizeable chunk of the time was used to make this webpage functional online.</p>
+		<p>To stick to tradition, I finished the bulk of it in an afternoon.</p>
 		<form action="https://github.com/tan-zhen-zhou/webfolio">
 			<button style="color:blue;">Look at the website's code!</button>
 		</form>
